src/test/compile-fail/writing-to-immutable-obj.rs
// xfail-stage0
// error-pattern:assigning to immutable obj field
obj objy(int x) {
    fn foo() -> () {
        x = 5;
    }
}
fn main() {
}
